--- a/backend/package.json
+++ b/backend/package.json
@@ -10,10 +10,13 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@sendgrid/mail": "^8.1.6",
+    "axios": "^1.13.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
-    "mongoose": "^9.0.1",
+    "mongoose": "^9.0.2",
+    "multer": "^2.0.2",
     "nodemailer": "^7.0.11"
   }
 }
